# storage/api-docs/api-docs.json
@@ -2100,6 +2100,230 @@
                 ]
             }
         },
+        "/order": {
+            "get": {
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Returns list of order",
+                "description": "Returns order data",
+                "operationId": "order_list",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "search_key",
+                        "in": "query",
+                        "description": "Search parameter or key word to search",
+                        "type": "string"
+                    },
+                    {
+                        "name": "from_date",
+                        "in": "query",
+                        "description": "Created at start date(YYYY-mm-dd) ",
+                        "type": "string"
+                    },
+                    {
+                        "name": "to_date",
+                        "in": "query",
+                        "description": "Created at end date(YYYY-mm-dd) ",
+                        "type": "string"
+                    },
+                    {
+                        "name": "skip",
+                        "in": "query",
+                        "description": "this is offset or skip the records",
+                        "type": "integer"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Number of records to be retrieved ",
+                        "type": "integer"
+                    },
+                    {
+                        "name": "sort_by",
+                        "in": "query",
+                        "description": "Sort by value",
+                        "type": "array",
+                        "items": {
+                            "type": "string",
+                            "default": "created_at",
+                            "enum": [
+                                "created_at"
+                            ]
+                        },
+                        "collectionFormat": "multi"
+                    },
+                    {
+                        "name": "order_by",
+                        "in": "query",
+                        "description": "Order by Ascending or descending",
+                        "type": "array",
+                        "items": {
+                            "type": "string",
+                            "default": "DESC",
+                            "enum": [
+                                "ASC",
+                                "DESC"
+                            ]
+                        },
+                        "collectionFormat": "multi"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Update order details",
+                "description": "",
+                "operationId": "add_or_update_order",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "data",
+                        "in": "body",
+                        "description": "order json input <br> Sample JSON to update order http://jsoneditoronline.org/?id=358062bd4c079cf42e9e2d4bfb627b10",
+                        "required": true,
+                        "schema": {}
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Create a order",
+                "description": "",
+                "operationId": "add_or_update_order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "data",
+                        "in": "body",
+                        "description": "order json input <br> Sample JSON to create order http://jsoneditoronline.org/?id=285c21877cf510b2b3855d796cd22a7e",
+                        "required": true,
+                        "schema": {}
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Order"
+                ],
+                "summary": "delete order data",
+                "description": "Delete order from system",
+                "operationId": "delete_order",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "query",
+                        "description": "ID of the order that needs to be deleted",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid data supplied"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            }
+        },
+        "/order/{_id}": {
+            "get": {
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Returns order data",
+                "description": "Returns order data",
+                "operationId": "order_list",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "_id",
+                        "in": "path",
+                        "description": "ID of the order that needs to be displayed",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid order id"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            }
+        },
         "/organization": {
             "get": {
                 "tags": [
@@ -4203,6 +4427,42 @@
                         "type": "string"
                     },
                     {
+                        "name": "page_code",
+                        "in": "query",
+                        "description": "Filter by page code",
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_1",
+                        "in": "query",
+                        "description": "Filter by page reference 1",
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_2",
+                        "in": "query",
+                        "description": "Filter by page reference 2",
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_3",
+                        "in": "query",
+                        "description": "Filter by page reference 3",
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_4",
+                        "in": "query",
+                        "description": "Filter by page reference 4",
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_5",
+                        "in": "query",
+                        "description": "Filter by page reference 5",
+                        "type": "string"
+                    },
+                    {
                         "name": "skip",
                         "in": "query",
                         "description": "this is offset or skip the records",
@@ -4213,6 +4473,40 @@
                         "in": "query",
                         "description": "Number of records to be retrieved ",
                         "type": "integer"
+                    },
+                    {
+                        "name": "sort_by",
+                        "in": "query",
+                        "description": "Sort by value",
+                        "type": "array",
+                        "items": {
+                            "type": "string",
+                            "default": "created_at",
+                            "enum": [
+                                "page_code",
+                                "reference_1",
+                                "reference_2",
+                                "reference_3",
+                                "reference_4",
+                                "reference_5"
+                            ]
+                        },
+                        "collectionFormat": "multi"
+                    },
+                    {
+                        "name": "order_by",
+                        "in": "query",
+                        "description": "Order by Ascending or descending",
+                        "type": "array",
+                        "items": {
+                            "type": "string",
+                            "default": "DESC",
+                            "enum": [
+                                "ASC",
+                                "DESC"
+                            ]
+                        },
+                        "collectionFormat": "multi"
                     }
                 ],
                 "responses": {
@@ -4251,8 +4545,43 @@
                     },
                     {
                         "name": "content",
-                        "in": "query",
+                        "in": "formData",
                         "description": "Page content of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_1",
+                        "in": "formData",
+                        "description": "Page reference 1 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_2",
+                        "in": "formData",
+                        "description": "Page reference 2 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_3",
+                        "in": "formData",
+                        "description": "Page reference 3 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_4",
+                        "in": "formData",
+                        "description": "Page reference 4 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_5",
+                        "in": "formData",
+                        "description": "Page reference 5 of the static page",
                         "required": true,
                         "type": "string"
                     }
@@ -4278,6 +4607,9 @@
                 "summary": "Create a static_html_page",
                 "description": "",
                 "operationId": "add_or_update_static_html_page",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -4291,8 +4623,43 @@
                     },
                     {
                         "name": "content",
-                        "in": "query",
+                        "in": "formData",
                         "description": "Page content of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_1",
+                        "in": "formData",
+                        "description": "Page reference_1 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_2",
+                        "in": "formData",
+                        "description": "Page reference 2 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_3",
+                        "in": "formData",
+                        "description": "Page reference 3 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_4",
+                        "in": "formData",
+                        "description": "Page reference 4 of the static page",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "reference_5",
+                        "in": "formData",
+                        "description": "Page reference 5 of the static page",
                         "required": true,
                         "type": "string"
                     }
@@ -4782,6 +5149,67 @@
                         "token": []
                     }
                 ]
+            },
+            "put": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "User profile",
+                "description": "User profile details",
+                "operationId": "user_profile",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "profile_image",
+                        "in": "formData",
+                        "description": "file to upload",
+                        "type": "file"
+                    },
+                    {
+                        "name": "first_name",
+                        "in": "query",
+                        "description": "First name of user",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "last_name",
+                        "in": "query",
+                        "description": "Last name of user",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "organization_id",
+                        "in": "query",
+                        "description": "Organization id",
+                        "type": "string"
+                    },
+                    {
+                        "name": "metadata",
+                        "in": "query",
+                        "description": "User realted metadata",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid data"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
             }
         },
         "/user/{uid}": {
@@ -4872,6 +5300,12 @@
                         "name": "organization_id",
                         "in": "query",
                         "description": "Organization id",
+                        "type": "string"
+                    },
+                    {
+                        "name": "metadata",
+                        "in": "formData",
+                        "description": "User realted metadata",
                         "type": "string"
                     }
                 ],
@@ -5122,6 +5556,10 @@
         {
             "name": "Static HTML page",
             "description": "Static HTML page related API's"
+        },
+        {
+            "name": "Order",
+            "description": "Orders related API's"
         }
     ]
 }
